--- a/public/admin.html
+++ b/public/admin.html
@@ -38,7 +38,7 @@
         Invites Go Here
       </div>
       <h2>Users</h2>
-      <div>
+      <div id="user-container">
         Users go Here
       </div>
 
