fixed claim bug

--- a/public/claim.html
+++ b/public/claim.html
@@ -11,7 +11,7 @@
   <div>
     Email: <input name="email" /><br>
     Password: <input type="password" name="password" /><br>
-    Code: <input name="code" /><br>
+    Code: <input name="code" id="code" /><br>
     <button id="claim">Claim</button>
   </div>
   <div id="response">
